foco en los detalles al hacer click en barra

--- a/frontend/src/Component/Reportes/ReporteIncidentes/ReporteIncidentes.css
+++ b/frontend/src/Component/Reportes/ReporteIncidentes/ReporteIncidentes.css
@@ -19,3 +19,9 @@
     width: 100%
   }
 }
+
+/* ReporteIncidentes.css */
+.apexcharts-series path,
+.apexcharts-series rect {
+  cursor: pointer;
+}
