--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1355,7 +1355,7 @@ body {
 /* Contenedor del trash: no se estira y empuja a la derecha */
 .actions-inline{
   display:flex !important;
-  justify-content:flex-end !important;
+  justify-content:center !important;
   width:auto !important;
   background:transparent !important;
   border:0 !important;
@@ -1451,3 +1451,7 @@ body:not(:has(.login-page)) .rs__control{
   background:#fff !important; color:#000 !important; border-color: var(--input-border) !important;
 }
 body:not(:has(.login-page)) .rs__menu{ background:#fff !important; color:#000 !important }
+
+.card-header.btn-link {
+  text-decoration: none !important;
+}
